Rest working with angular

--- a/src/main/webapp/views/home.html
+++ b/src/main/webapp/views/home.html
@@ -1,27 +1,8 @@
-<h2 class="text-center">AngularJS Boilerplate</h2>
+<h2 class="text-center">Administração/Pessoa</h2>
 
-<!-- slider directive -->
-<div myslider>
-    <ul class="slider">
-        <li class="image-slider">
-            <img src="https://unsplash.imgix.net/photo-1426200830301-372615e4ac54?fit=crop&fm=jpg&h=725&q=75&w=1050" alt="Image">
-        </li>
-        <li class="image-slider">
-            <img src="https://unsplash.imgix.net/photo-1421977870504-378093748ae6?fit=crop&fm=jpg&h=700&q=75&w=1050" alt="Image">
-        </li>
-        <li class="image-slider">
-            <img src="https://ununsplash.imgix.net/photo-1421757295538-9c80958e75b0?fit=crop&fm=jpg&h=700&q=75&w=1050" alt="Image">
-        </li>
-        <li class="image-slider">
-            <img src="https://unsplash.imgix.net/photo-1420745981456-b95fe23f5753?fit=crop&fm=jpg&h=700&q=75&w=1050" alt="Image">
-        </li>
-        <li class="image-slider">
-            <img src="https://download.unsplash.com/photo-1415871989540-61fe9268d3c8" alt="Image">
-        </li>
-    </ul>
-</div>
 
-<h3>Features</h3>
+
+<h3>Inserir Contato</h3>
 <div class="container cf">
     <div>
         <ul>
@@ -42,6 +23,6 @@
 </div>
 
 <div class="text-center">
-    <small>Images courtesy of <a target="_blank" href="http://unsplash.com">unsplash.com</a></small>
+    <small>Crud Application <a target="_blank" href="http://unsplash.com"> by Jean Lucas</a></small>
 </div>
 
