--- a/src/main/webapp/components/directives/main-nav.html
+++ b/src/main/webapp/components/directives/main-nav.html
@@ -13,9 +13,10 @@
         <!-- nav -->
         <nav role="navigation" class="main-nav text-center" itemscope itemtype="http://schema.org/SiteNavigationElement">
             <ul class="menu cf">
+                <li><a href="#/home">Administração</a></li>
+                <li><a href="#/lista">Lista</a></li>
                 <li><a href="#/home">Home</a></li>
-                <li><a href="#/setup">Setup</a></li>
-                <li><a href="#/contact">Contact</a></li>
+                
             </ul>
         </nav>
     </div>
@@ -23,10 +24,11 @@
 
 <div class="responsive-wrapper">
     <ul class="cf responsive-nav option-set">
-        <li><a href="#/home">Home</a></li><!--
+        <li><a href="#/home">Administração</a></li><!--
         remove gap
-        --><li><a href="#/setup">Setup</a></li><!--
+       --><li><a href="#/lista">Lista</a></li>
         remove gap
-        --><li><a href="#/contact">Contact</a></li>
+        
+         --><li><a href="#/setup">Setup</a></li>
     </ul>
 </div>
