--- a/src/main/webapp/components/directives/main-nav.html
+++ b/src/main/webapp/components/directives/main-nav.html
@@ -15,7 +15,7 @@
             <ul class="menu cf">
                 <li><a href="#/home">Administração</a></li>
                 <li><a href="#/lista">Lista</a></li>
-                <li><a href="#/home">Home</a></li>
+                <li><a href="#/importar">Importação/Exportação</a></li>
                 
             </ul>
         </nav>
