--- a/src/main/webapp/views/home.html
+++ b/src/main/webapp/views/home.html
@@ -1,27 +1,32 @@
 <h2 class="text-center">Administração/Pessoa</h2>
 
 
-
-<h3>Inserir Contato</h3>
-<div class="container cf">
-    <div>
-        <ul>
-            <li>* SASS support including sourceMaps</li>
-            <li>* Minimal CSS styling of the view</li>
-            <li>* Gulp watch, build and local server tasks</li>
-            <li>* Responsive navigation</li>
-            <li>* Owl slider directive</li>
-            <li>* Responsive navigation</li>
-            <li>* localStorage service for set, get, remove data</li>
-            <li>* queryService $http wrapper to handle calls</li>
-            <li>* clear folder structure</li>
-            <li>* less than 10 request in build version</li>
-            <li>* minified CSS and JS build files</li>
-            <li>* google analytics snippet</li>
-        </ul>
+<div class="form-control" align="center">
+    <h3>Inserir Contato</h3>
+    <div class="form-group">
+      <label for="usr">Nome:</label>
+      <input type="text" class="form-control" id="nome">
     </div>
-</div>
 
+    <div class="form-group">
+      <label for="usr">Email:</label>
+      <input type="text" class="form-control" id="email">
+    </div>
+
+    <div class="form-group">
+      <label for="usr">Telefone:</label>
+      <input type="text" class="form-control" id="telefone">
+    </div>
+
+    <div class="form-group">
+      <label for="usr">Empresa:</label>
+      <input type="text" class="form-control" id="empresa">
+    </div>
+    
+     <div class="col-md-12">
+            <button type="button" class="btn btn-primary active">Salvar Pessoa</button>
+        </div>
+</div>
 <div class="text-center">
     <small>Crud Application <a target="_blank" href="http://unsplash.com"> by Jean Lucas</a></small>
 </div>
