--- a/src/main/webapp/components/directives/main-nav.html
+++ b/src/main/webapp/components/directives/main-nav.html
@@ -13,9 +13,9 @@
         <!-- nav -->
         <nav role="navigation" class="main-nav text-center" itemscope itemtype="http://schema.org/SiteNavigationElement">
             <ul class="menu cf">
-                <li><a href="#/home">Administração</a></li>
-                <li><a href="#/lista">Lista</a></li>
-                <li><a href="#/importar">Importação/Exportação</a></li>
+                <li><a href="#/home">Tela 1 - Inserção</a></li>
+                <li><a href="#/lista">Tela 2 - Listagem </a></li>
+                <li><a href="#/importar">Tela 3 Importação/Exportação</a></li>
                 
             </ul>
         </nav>
@@ -24,11 +24,11 @@
 
 <div class="responsive-wrapper">
     <ul class="cf responsive-nav option-set">
-        <li><a href="#/home">Administração</a></li><!--
+        <li><a href="#/home">Tela 1 - Inserção</a></li><!--
         remove gap
-       --><li><a href="#/lista">Lista</a></li>
+       --><li><a href="#/lista">Tela 2 - Listagem</a></li>
         remove gap
         
-         --><li><a href="#/setup">Setup</a></li>
+         --><li><a href="#/setup">Tela 3 Importação/Exportação</a></li>
     </ul>
 </div>
