--- a/src/main/webapp/views/import.html
+++ b/src/main/webapp/views/import.html
@@ -3,10 +3,9 @@
         <div class="col-md-12">
             <input id="input-xml"
              type="file"
-             data-icon="false"
-             accept="application/xml"
-             ng-model="main.arquivoImportacao">
-            <button type="button" class="btn btn-primary active">Importar XML</button>
+             file-model="main.documento">
+            <button type="button" class="btn btn-primary active"
+                    ng-click="main.upload(main.documento)">Importar XML</button>
         </div>
         <div class="col-md-12">
             <button type="button" class="btn btn-primary active">Exportar</button>
