--- a/src/main/webapp/views/lista.html
+++ b/src/main/webapp/views/lista.html
@@ -1,6 +1,45 @@
 <h2>Lista de Pessoas Por Contato</h2>
 
 <div class="container cf">
+    <label>Pesquise por email:</label>
+     <div class="row">
+         <for>
+            <div class="form-group col-md-8">
+              <input ng-model="pessoaForm.email" type="text" class="form-control" id="pessoaFormEmail">
+               
+            </div>
+             <div class="form-group col-md-4">
+               <button ng-click="main.getPessoaPorEmail(pessoaForm.email)" type="button" class="btn btn-primary active">Pesquisar</button>
+             </div>
+        </for>
+    </div>
+    
+  <div class="form-control" align="left">
+    <h3>Pessoa</h3>
+    <div class="form-group">
+      <label for="usr">Nome:</label>
+      <input ng-model="main.pessoaForm.nome" type="text" class="form-control" id="nome" >
+
+    </div>
+
+    <div class="form-group">
+      <label for="usr">Email:</label>
+      <input  ng-model="main.pessoaForm.email" type="text" class="form-control" id="email" >
+    </div>
+
+    <div class="form-group">
+      <label for="usr">Telefone:</label>
+      <input  ng-model="main.pessoaForm.telefone" type="text" class="form-control" id="telefone" >
+    </div>
+
+    <div class="form-group">
+      <label for="usr">Empresa:</label>
+      <input ng-model="main.pessoaForm.empresa" type="text" class="form-control" id="empresa">
+    </div>
+</div>  
+    
+    
+    
     <div>
         <table>
             <thead>
@@ -12,11 +51,11 @@
                 </tr>
             </thead>
             <tbody>
-                <tr  ng-repeat="pessoa in main.listaPessoas">
-                    <td width="30%">{{pessoa.nome}} </td>
-                    <td width="20%">{{pessoa.email}}</td>
-                    <td width="20%">{{pessoa.telefone}}</td>
-                    <td width="30%">{{pessoa.empresa}}</td>
+                <tr  ng-repeat="amigo in main.listaAmigos">
+                    <td width="30%">{{amigo.nome}} </td>
+                    <td width="20%">{{amigo.email}}</td>
+                    <td width="20%">{{amigo.telefone}}</td>
+                    <td width="30%">{{amigo.empresa}}</td>
             </tr>
             </tbody>
         </table>
