--- a/src/main/webapp/views/lista.html
+++ b/src/main/webapp/views/lista.html
@@ -2,60 +2,63 @@
 
 <div class="container cf">
     <label>Pesquise por email:</label>
-     <div class="row">
-         <for>
+     
+    <div class="form-group" >     
             <div class="form-group col-md-8">
               <input ng-model="pessoaForm.email" type="text" class="form-control" id="pessoaFormEmail">
                
             </div>
              <div class="form-group col-md-4">
                <button ng-click="main.getPessoaPorEmail(pessoaForm.email)" type="button" class="btn btn-primary active">Pesquisar</button>
-             </div>
-        </for>
+             </div>    
     </div>
-    
-  <div class="form-control" align="left">
-    <h3>Pessoa</h3>
-    <div class="form-group">
+   
+  <div class="form-group" align="left">
+     <div class="col-md-12">
+      <h3 align="left">Pessoa</h3>
+      </div>
+    <div class="col-md-6">
       <label for="usr">Nome:</label>
-      <input ng-model="main.pessoaForm.nome" type="text" class="form-control" id="nome" >
+      <input ng-model="main.pessoaForm.nome" type="text" class="form-control" id="nome" disabled>
 
     </div>
 
-    <div class="form-group">
+  <div class="col-md-6">
       <label for="usr">Email:</label>
-      <input  ng-model="main.pessoaForm.email" type="text" class="form-control" id="email" >
+      <input  ng-model="main.pessoaForm.email" type="text" class="form-control" id="email" disabled>
     </div>
 
-    <div class="form-group">
+    <div class="col-md-6">
       <label for="usr">Telefone:</label>
-      <input  ng-model="main.pessoaForm.telefone" type="text" class="form-control" id="telefone" >
+      <input  ng-model="main.pessoaForm.telefone" type="text" class="form-control" id="telefone" disable>
     </div>
 
-    <div class="form-group">
+   <div class="col-md-6">
       <label for="usr">Empresa:</label>
-      <input ng-model="main.pessoaForm.empresa" type="text" class="form-control" id="empresa">
+      <input ng-model="main.pessoaForm.empresa" type="text" class="form-control" id="empresa" disabled>
     </div>
 </div>  
     
     
     
-    <div>
-        <table>
+    <div class = "table table-striped" >
+        <table class="table table-bordered">
             <thead>
                 <tr>
-                    <th width="30%">nome</th>
+                    <th width="20%">nome</th>
                     <th width="20%">email</th>
                     <th width="20%">telefone</th>
-                    <th width="30%">empresa</th>
+                    <th width="20%">empresa</th>
+                    <th width="20%">Apagar</th>
                 </tr>
             </thead>
             <tbody>
                 <tr  ng-repeat="amigo in main.listaAmigos">
-                    <td width="30%">{{amigo.nome}} </td>
+                    <td width="20%">{{amigo.nome}} </td>
                     <td width="20%">{{amigo.email}}</td>
                     <td width="20%">{{amigo.telefone}}</td>
-                    <td width="30%">{{amigo.empresa}}</td>
+                    <td width="20%">{{amigo.empresa}}</td>
+                    <td style="width:20%"><a> <button class="btn btn-primary btn-block" type="button" ng-click="removerAmigo(amigo)">{{btnEdit}}</button></a></td>
             </tr>
             </tbody>
         </table>
