--- a/src/main/webapp/views/home.html
+++ b/src/main/webapp/views/home.html
@@ -1,28 +1,30 @@
     <div class="form-group" align="center">
           <h3>Inserir Contato</h3>
-    <div class="col-md-6">
-      <label for="usr">Nome:</label>
-      <input ng-model="pessoaForm.nome" type="text" class="form-control" id="nome">
+    <form>
+    <div class="col-md-6" ng-class="{'has-error':main.validaCampos}">
+      <label >Nome:</label>
+      <input ng-model="pessoaForm.nome" type="text" class="form-control" id="nome" required>
 
     </div>
 
     <div class="col-md-6">
-      <label for="usr">Email:</label>
-      <input  ng-model="pessoaForm.email" type="text" class="form-control" id="email">
+      <label >Email:</label>
+      <input  ng-model="pessoaForm.email" type="text" class="form-control" id="email" required>
     </div>
 
     <div class="col-md-6">
-      <label for="usr">Telefone:</label>
-      <input  ng-model="pessoaForm.telefone" type="text" class="form-control" id="telefone">
+      <label >Telefone:</label>
+      <input  ng-model="pessoaForm.telefone" type="text" class="form-control" id="telefone" required>
     </div>
 
     <div class="col-md-6">
-      <label for="usr">Empresa:</label>
+      <label >Empresa:</label>
       <input ng-model="pessoaForm.empresa" type="text" class="form-control" id="empresa">
     </div>
     
      <div class="col-md-12">
-            <button ng-click="main.salvar(pessoaForm)" type="button" class="btn btn-primary active">Salvar Pessoa</button>
+            <button ng-click="main.salvar(pessoaForm)" type="submit" class="btn btn-primary active">Salvar Pessoa</button>
         </div>
+    </form>
 </div>
 
