--- a/src/main/webapp/views/lista.html
+++ b/src/main/webapp/views/lista.html
@@ -1,4 +1,4 @@
-<h2>Lista de Pessoas Por Contato</h2>
+
 
 <div class="container cf">
     <label>Pesquise por email:</label>
@@ -40,9 +40,10 @@
     </div>
 </div>  
     
-    
-    
+<div class="form-group" align="left">  
+  <div class="col-md-12"><h2>Lista de contatos</h2></div>
     <div class = "table table-striped" >
+      <div class="col-md-12">
         <table class="table table-bordered">
             <thead>
                 <tr>
@@ -59,9 +60,11 @@
                     <td width="20%">{{amigo.email}}</td>
                     <td width="20%">{{amigo.telefone}}</td>
                     <td width="20%">{{amigo.empresa}}</td>
-                    <td style="width:20%"><a> <button class="btn btn-primary btn-block" type="button" ng-click="removerAmigo(amigo)">{{btnEdit}}</button></a></td>
+                    <td style="width:20%"><a> <button class="btn btn-primary btn-block" type="button" ng-click="main.removerAmigo(amigo)">Apagar</button></a></td>
             </tr>
             </tbody>
         </table>
+        </div>
+    </div>
     </div>
 </div>
