Screen changes and refactoring

--- a/src/main/webapp/views/home.html
+++ b/src/main/webapp/views/home.html
@@ -1,30 +1,100 @@
-    <div class="form-group" align="center">
-          <h3>Inserir Contato</h3>
+<div class="form-group" align="center">
+<label>Pesquise por email ou adicione um novo:</label>
+     <form>     
+        <div class="form-group col-md-8">
+          <input ng-model="pessoaFormPesquisa.email" type="text" class="form-control" id="pessoaFormEmail">
+        </div>
+         <div class="form-group col-md-4">
+           <button ng-click="main.getPessoaPorEmail(pessoaFormPesquisa.email)" type="submit" class="btn btn-primary active">Pesquisar</button>
+         </div>    
+           
+    </form>
+</div>
+<div class="form-group" align="center">
+          <h3>Inserir Pessoa</h3>
     <form>
     <div class="col-md-6" ng-class="{'has-error':main.validaCampos}">
       <label >Nome:</label>
-      <input ng-model="pessoaForm.nome" type="text" class="form-control" id="nome" required>
+      <input ng-model="main.pessoaForm.nome" type="text" class="form-control" id="nome" required>
 
     </div>
 
     <div class="col-md-6">
       <label >Email:</label>
-      <input  ng-model="pessoaForm.email" type="text" class="form-control" id="email" required>
+      <input  ng-model="main.pessoaForm.email" type="text" class="form-control" id="email" required>
     </div>
 
     <div class="col-md-6">
       <label >Telefone:</label>
-      <input  ng-model="pessoaForm.telefone" type="text" class="form-control" id="telefone" required>
+      <input  ng-model="main.pessoaForm.telefone" type="text" class="form-control" id="telefone" required>
     </div>
 
     <div class="col-md-6">
       <label >Empresa:</label>
-      <input ng-model="pessoaForm.empresa" type="text" class="form-control" id="empresa">
+      <input ng-model="main.pessoaForm.empresa" type="text" class="form-control" id="empresa">
     </div>
     
      <div class="col-md-12">
-            <button ng-click="main.salvar(pessoaForm)" type="submit" class="btn btn-primary active">Salvar Pessoa</button>
+            <button ng-click="main.salvar(main.pessoaForm)" type="submit" class="btn btn-primary active">Salvar Pessoa</button>
         </div>
     </form>
+        
+        
 </div>
+<div class="form-group" align="center">
+    <h2>Atualização e inserção de contatos</h2>
+    <form>
+    <div class="col-md-6">
+      <label >Nome:</label>
+      <input ng-model="amigoForm.nome" type="text" class="form-control" id="nome" required>
 
+    </div>
+
+    <div class="col-md-6">
+      <label >Email:</label>
+      <input  ng-model="amigoForm.email" type="text" class="form-control" id="email" required>
+    </div>
+
+    <div class="col-md-6">
+      <label >Telefone:</label>
+      <input  ng-model="amigoForm.telefone" type="text" class="form-control" id="telefone" required>
+    </div>
+
+    <div class="col-md-6">
+      <label >Empresa:</label>
+      <input ng-model="amigoForm.empresa" type="text" class="form-control" id="empresa">
+    </div>
+    
+     <div class="col-md-12">
+            <button ng-click="main.inserirAmigo(pessoaForm.pessoaId,amigoForm)" type="submit" class="btn btn-primary active">Salvar Amigo</button>
+        </div>
+    </form>
+        
+</div>
+<div class="form-group" align="left">  
+  <div class="col-md-12"><h2>Lista de contatos</h2></div>
+    <div class = "table table-striped" >
+      <div class="col-md-12">
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th width="20%">nome</th>
+                    <th width="20%">email</th>
+                    <th width="20%">telefone</th>
+                    <th width="20%">empresa</th>
+                    <th width="20%">Apagar</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr  ng-repeat="amigo in main.listaAmigos">
+                    <td width="20%">{{amigo.nome}} </td>
+                    <td width="20%">{{amigo.email}}</td>
+                    <td width="20%">{{amigo.telefone}}</td>
+                    <td width="20%">{{amigo.empresa}}</td>
+                    <td style="width:20%"><a> <button class="btn btn-primary btn-block" type="button" ng-click="main.removerAmigo(amigo)">Apagar</button></a></td>
+            </tr>
+            </tbody>
+        </table>
+        </div>
+    </div>
+</div>
