--- a/src/main/webapp/frontend/views/home.html
+++ b/src/main/webapp/frontend/views/home.html
@@ -6,8 +6,7 @@
         </div>
          <div class="form-group col-md-4">
            <button ng-click="main.getPessoaPorEmail(pessoaFormPesquisa.email)" type="submit" class="btn btn-primary active">Pesquisar</button>
-         </div>    
-           
+         </div>       
     </form>
 </div>
 <div class="form-group" align="center">
@@ -46,27 +45,27 @@
     <form>
     <div class="col-md-6">
       <label >Nome:</label>
-      <input ng-model="amigoForm.nome" type="text" class="form-control" id="nome" required>
+      <input ng-model="main.amigoForm.nome" type="text" class="form-control" id="nome" required>
 
     </div>
 
     <div class="col-md-6">
       <label >Email:</label>
-      <input  ng-model="amigoForm.email" type="text" class="form-control" id="email" required>
+      <input  ng-model="main.amigoForm.email" type="text" class="form-control" id="email" required>
     </div>
 
     <div class="col-md-6">
       <label >Telefone:</label>
-      <input  ng-model="amigoForm.telefone" type="text" class="form-control" id="telefone" required>
+      <input  ng-model="main.amigoForm.telefone" type="text" class="form-control" id="telefone" required>
     </div>
 
     <div class="col-md-6">
       <label >Empresa:</label>
-      <input ng-model="amigoForm.empresa" type="text" class="form-control" id="empresa">
+      <input ng-model="main.amigoForm.empresa" type="text" class="form-control" id="empresa">
     </div>
     
      <div class="col-md-12">
-            <button ng-click="main.inserirAmigo(pessoaForm.pessoaId,amigoForm)" type="submit" class="btn btn-primary active">Salvar Amigo</button>
+            <button ng-click="main.inserirAmigo(main.pessoaForm.pessoaId,main.amigoForm)" type="submit" class="btn btn-primary active">Salvar Amigo</button>
         </div>
     </form>
         
