Bussiness object added

--- a/src/main/webapp/frontend/views/home.html
+++ b/src/main/webapp/frontend/views/home.html
@@ -4,7 +4,7 @@
     <div class="col-md-12"><label align="center">Pesquise por email ou adicione uma nova pessoa abaixo:</label></div>
      <form>     
         <div class="form-group col-md-8">
-          <input ng-model="pessoaFormPesquisa.email" type="text" class="form-control" id="pessoaFormEmail">
+          <input ng-model="pessoaFormPesquisa.email" type="text" class="form-control" id="pessoaFormEmail"/>
         </div>
          <div class="form-group col-md-4">
            <button ng-click="main.getPessoaPorEmail(pessoaFormPesquisa.email)" type="submit" class="btn btn-primary active">Pesquisar</button>
