Validation of inserting contact

--- a/src/main/webapp/frontend/views/home.html
+++ b/src/main/webapp/frontend/views/home.html
@@ -59,7 +59,7 @@
 
     <div class="col-md-6">
       <label >Telefone:</label>
-      <input  ng-model="main.amigoForm.telefone" type="text" class="form-control" id="telefone" required>
+      <input  ng-model="main.amigoForm.telefone" type="tel"  class="form-control" id="telefone" required>
     </div>
 
     <div class="col-md-6">
